--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ x-airflow-env:
 
 x-airflow-volumes:
   &airflow-volumes
-  - ./src/dags:/opt/airflow/dags
-  - ./src/plugins:/opt/airflow/plugins
+  - ./src/airflow/dags:/opt/airflow/dags
   - logs:/opt/airflow/logs
 
 volumes:
